--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#/vehicles">Veículos</a></li>
+                    <li class="active"><a href="#!/vehicles">Veículos</a></li>
                 </ul>
             </div>
         </div>
@@ -41,7 +41,7 @@
         <div ng-view></div>
 
         <footer class="footer">
-            <p>&copy; 2016 SOFIT Software.</p>
+            <p>&copy; 2017 SOFIT Software.</p>
         </footer>
     </div>
 
